--- a/templates/currency/index.html.twig
+++ b/templates/currency/index.html.twig
@@ -3,16 +3,18 @@
 {% block title %}Currency index{% endblock %}
 
 {% block body %}
-    <h1>Currency index</h1>
-
+    <div class="container col-9 mt-5">
+        <h1 class="text-center mb-3">Liste des devises</h1>
+    </div>
+    <div class="bloc-wrapper container col-9">
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
+                <th>Nom</th>
                 <th>Code</th>
-                <th>Flag</th>
-                <th>actions</th>
+                <th>Drapeau</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -21,10 +23,9 @@
                 <td>{{ currency.id }}</td>
                 <td>{{ currency.name }}</td>
                 <td>{{ currency.code }}</td>
-                <td>{{ currency.flag }}</td>
+                <td><img src="{{ asset('build/images/'~currency.flag) }}" alt="" height="30" width="40"></td>
                 <td>
-                    <a href="{{ path('app_currency_show', {'id': currency.id}) }}">show</a>
-                    <a href="{{ path('app_currency_edit', {'id': currency.id}) }}">edit</a>
+                    <a class="btn btn-info" href="{{ path('app_currency_edit', {'id': currency.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -34,6 +35,9 @@
         {% endfor %}
         </tbody>
     </table>
+        <a class="btn btn-primary" href="{{ path('app_convert') }}">Retour</a>
+        <a class="btn btn-success" href="{{ path('app_currency_new') }}">Ajouter une devise</a>
+</div>
 
-    <a href="{{ path('app_currency_new') }}">Create new</a>
+
 {% endblock %}
