--- a/templates/exchange_rate/index.html.twig
+++ b/templates/exchange_rate/index.html.twig
@@ -3,13 +3,17 @@
 {% block title %}ExchangeRate index{% endblock %}
 
 {% block body %}
-    <h1>ExchangeRate index</h1>
-
+    <div class="container col-9 mt-5">
+        <h1 class="text-center mb-3">Liste des taux de change</h1>
+    </div>
+    <div class="bloc-wrapper container col-9">
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Rate</th>
+                <th>De</th>
+                <th>Vers</th>
+                <th>Taux</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -17,10 +21,11 @@
         {% for exchange_rate in exchange_rates %}
             <tr>
                 <td>{{ exchange_rate.id }}</td>
+                <td>{{ exchange_rate.currency_from }}</td>
+                <td>{{ exchange_rate.currency_to }}</td>
                 <td>{{ exchange_rate.rate }}</td>
                 <td>
-                    <a href="{{ path('app_exchange_rate_show', {'id': exchange_rate.id}) }}">show</a>
-                    <a href="{{ path('app_exchange_rate_edit', {'id': exchange_rate.id}) }}">edit</a>
+                    <a class="btn btn-info" href="{{ path('app_exchange_rate_edit', {'id': exchange_rate.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -30,6 +35,7 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_exchange_rate_new') }}">Create new</a>
+    <a class="btn btn-primary" href="{{ path('app_convert') }}">Retour</a>
+    <a class="btn btn-success" href="{{ path('app_exchange_rate_new') }}">Ajouter un taux de change</a>
+    </div>
 {% endblock %}
